--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .DS_Store
 /.build
+/dist
 /Packages
+/.swiftpm/
+/.vscode/
+/.idea/
+*.log
 xcuserdata/
 DerivedData/
-.swiftpm/configuration/registries.json
-.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
